fix profile image size on ios

--- a/app/frontend/packs/styles/components/_images.scss
+++ b/app/frontend/packs/styles/components/_images.scss
@@ -1,6 +1,7 @@
 @use '../base/mixins' as *;
 
 .profile-image {
+  height: 100%;
   position: relative;
   width: 50%;
 
